--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "services": "https://github.com/LabShare/services.git"
   },
   "devDependencies": {
-    "istanbul": "^0.4.5"
+    "chai": "^4.0.2",
+    "istanbul": "^0.4.5",
+    "superagent": "^3.5.2"
   }
 }
