--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "istanbul": "^0.4.5",
+    "jasmine-spec-reporter": "^4.1.1",
     "superagent": "^3.5.2"
   }
 }
